[gd_scene load_steps=3 format=3 uid="uid://3errjvdimldd"]

[ext_resource type="Script" path="res://Scripts/Screen/In_game/Puzzles/EightPuzzle/EightPuzzleTile.gd" id="1_0x1nw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p15j6"]
size = Vector2(128, 128)

[node name="EightPuzzleTile" type="Area2D"]
script = ExtResource("1_0x1nw")

[node name="TileSprite" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_p15j6")

[connection signal="input_event" from="." to="." method="_on_input_event"]
